--- a/App/composer.json
+++ b/App/composer.json
@@ -42,6 +42,7 @@
         "symfony/web-link": "7.3.*",
         "symfony/webpack-encore-bundle": "^2.4",
         "symfony/yaml": "7.3.*",
+        "symfonycasts/reset-password-bundle": "^1.24",
         "symfonycasts/verify-email-bundle": "^1.17",
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/twig": "^2.12|^3.0"
