--- a/App/.env
+++ b/App/.env
@@ -30,7 +30,7 @@ DEFAULT_URI=http://localhost
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data_%kernel.environment%.db"
-DATABASE_URL="mysql://ecoride:ecoride@127.0.0.1:3306/ecoride?serverVersion=8.0.36&charset=utf8mb4"
+DATABASE_URL="mysql://admin:*studi@aksis*@127.0.0.1:3306/ecoride?serverVersion=8.0.43&charset=utf8mb4"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
 ###< doctrine/doctrine-bundle ###
 
